saving user data to JSON file (without past education & work experience)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,7 @@
     <string name="gumbDodaj">DODAJ</string>
     <string name="delovnoMesto">Delovno mesto</string>
     <string name="delovneIzkusnje">Pretekle delovne izkušnje</string>
+    <string name="PonudbaDel">Ponudba del</string>
+    <string name="shrani">SHRANI</string>
+    <string name="missingInputError">Izpolnite vsa polja</string>
 </resources>
