fixed bug (app crashed when userData file didn't exist or didn't have set "izobrazba"/"izkusnje" values)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="PonudbaDel">Ponudba del</string>
     <string name="shrani">SHRANI</string>
     <string name="missingInputError">Izpolnite vsa polja</string>
+    <string name="fileSaved">Podatki so bili uspešno shranjeni</string>
 </resources>
