Working "POKAŽI VEČ" button and content loading on Job detail page

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,5 @@
     <string name="delovnik">"Delovnik: "</string>
     <string name="zacetekDela">"Začetek dela: "</string>
     <string name="pokaziVec">POKAŽI VEČ</string>
+    <string name="prijaviSe">PRIJAVI SE</string>
 </resources>
