messege when no jobs are saved

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,4 +35,5 @@
     <string name="shranjenaDela">Shranjena dela</string>
     <string name="dashboard">Dashboard</string>
     <string name="seznamDogodkov">Prihajajoči dogodki</string>
+    <string name="nicShranjenihDel">Trenutno nimaš shranjenega nobenega dela</string>
 </resources>
