--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,14 +16,12 @@
     <string name="gumbDodaj">DODAJ</string>
     <string name="delovnoMesto">Delovno mesto</string>
     <string name="delovneIzkusnje">Pretekle delovne izkušnje</string>
-    <string name="PonudbaDel">Ponudba del</string>
+    <string name="ponudbaDel">Ponudba del</string>
     <string name="shrani">SHRANI</string>
     <string name="missingInputError">Izpolnite vsa polja</string>
     <string name="fileSaved">Podatki so bili uspešno shranjeni</string>
-    <string name="home">Home</string>
-    <string name="events">Events</string>
-    <string name="cv">CV</string>
-    <string name="jobs">Jobs</string>
+    <string name="home">Domov</string>
+    <string name="events">Dogodki</string>
     <string name="placaNeto">€/h neto</string>
     <string name="prostaMesta">"Prosta mesta: "</string>
     <string name="trajanje">"Trajanje: "</string>
