Fixed "Moj profil" section of dashboard when userData file does not yet exist

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,4 +37,5 @@
     <string name="pozor">POZOR</string>
     <string name="unsavedChanges">Vaše spremembe še niso bile shranjene. Želite vseeno zapustiti aktivnost?</string>
     <string name="izvozi">IZVOZI</string>
+    <string name="ustvariProfil">Ustvari svoj profil.</string>
 </resources>
