--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,5 @@
     <string name="unsavedChanges">Vaše spremembe še niso bile shranjene. Želite vseeno zapustiti aktivnost?</string>
     <string name="izvozi">IZVOZI</string>
     <string name="ustvariProfil">Ustvari svoj profil.</string>
+    <string name="premissionDenied">Dovoljenje za dostop do podatkov zavrnjeno.</string>
 </resources>
