Applying to jobs gives feedback

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,4 +39,6 @@
     <string name="izvozi">IZVOZI</string>
     <string name="ustvariProfil">Ustvari svoj profil.</string>
     <string name="premissionDenied">Dovoljenje za dostop do podatkov zavrnjeno.</string>
+    <string name="alreadyApplied">Prijava na to delo je bila oddana</string>
+    <string name="errorNoProfileData">Preden se prijaviš na delo izpolni svoj življenjepis</string>
 </resources>
