regex verification of input in "Življenjepis"

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,4 +41,5 @@
     <string name="premissionDenied">Dovoljenje za dostop do podatkov zavrnjeno.</string>
     <string name="alreadyApplied">Prijava na to delo je bila oddana</string>
     <string name="errorNoProfileData">Preden se prijaviš na delo izpolni svoj življenjepis</string>
+    <string name="incorrectEntry">Napaka pri vnosu</string>
 </resources>
