"Ponudba del" filter functionality

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,4 +43,5 @@
     <string name="errorNoProfileData">Preden se prijaviš na delo izpolni svoj življenjepis</string>
     <string name="incorrectEntry">Napaka pri vnosu</string>
     <string name="apply">POTRDI</string>
+    <string name="noJobsForFilter">Izbranemu filtru ne ustreza nobena ponudba.</string>
 </resources>
